<resources>
    <string name="app_name">kalkulator</string>
    <string name="linerCalc">Linear Layout</string>
    <string name="relativeCalc">Relative Layout</string>
    <string name="empty">empty</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="title_activity_main_fragment">MainFragmentActivity</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_frag">MainFragActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string-array name="cityName">
        <item>Lodz</item>
        <item>Warszawa</item>
        <item>Krakow</item>
    </string-array>
</resources>

