    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:orientation="vertical" >
        <Button
            android:id="@+id/linear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/linerCalc"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="20dp"
            android:layout_gravity="center" />
        <Button
            android:id="@+id/relative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/relativeCalc"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:layout_margin="20dp"
            android:layout_gravity="center" />
        <Button
            android:id="@+id/about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:layout_margin="20dp"
            android:layout_gravity="center" />
        <Button
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:layout_margin="20dp"
            android:layout_gravity="center" />
    </LinearLayout>
